--- a/h_food.html
+++ b/h_food.html
@@ -69,12 +69,13 @@
 	<span class="page-number">Page 2 of 2</span>
 	<a class="older-posts" href="healthy_food.html">Older Posts &rarr;</a>
 	</nav>
-	</main>
+	</section>
+        </main>
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
 		<a href="index.html">HealthTreasure</a> &copy; 2020<br/>
-		A care towards health never quits <a href="https://wowthemes.net">HealthTreasure.com</a>
+		A care towards health never quits <a href="index.html">HealthTreasure.com</a>
 	</div>
 	</footer>
 </div>
