--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="#"><span class='symbol'>circleemail</span></a>
 		</span>
 	
 	</ul>
@@ -111,7 +111,7 @@ Yoga has become a very common term in the Western world today, and yoga classes 
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
 		<a href="index.html">HealthTreasure</a> &copy; 2020<br/>
-		A care towards health never quits <a href="https://wowthemes.net">HealthTreasure.com</a>
+		A care towards health never quits <a href="index.html">HealthTreasure.com</a>
 	</div>
 	
 	</footer>
