--- a/h_food.html
+++ b/h_food.html
@@ -27,7 +27,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="#"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
