--- a/thought.html
+++ b/thought.html
@@ -26,7 +26,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="#"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -46,7 +46,7 @@
 	<p>It's unclear why people who engage in positive thinking experience these health benefits. One theory is that having a positive outlook enables you to cope better with stressful situations, which reduces the harmful health effects of stress on your body.
 	</p>
 	<p>
-	It's also thought that positive and optimistic people tend to live healthier lifestyles — they get more physical activity, follow a healthier diet, and don't smoke or drink alcohol in excess.
+	It's also thought that positive and optimistic people tend to live healthier lifestyles â€” they get more physical activity, follow a healthier diet, and don't smoke or drink alcohol in excess.
 	</p>
 	</div>
 	
@@ -55,7 +55,7 @@
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
 		<a href="index.html">HealthTreasure</a> &copy; 2020<br/>
-		A care towards health never quits <a href="https://wowthemes.net">HealthTreasure.com</a>
+		A care towards health never quits <a href="index.html">HealthTreasure.com</a>
 	</div>
 	</footer>
 </div>
