--- a/tips.html
+++ b/tips.html
@@ -26,7 +26,7 @@
 		<a href="#"><span class='symbol'>circletwitterbird</span></a>
 		<a href="#"><span class='symbol'>circlefacebook</span></a>
 		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="#"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -128,7 +128,7 @@ On the other hand, consuming excessive amounts of sugars increases the risk of t
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
 		<a href="index.html">HealthTreasure</a> &copy; 2020<br/>
-		A care towards health never quits <a href="https://wowthemes.net">HealthTreasure.com</a>
+		A care towards health never quits <a href="index.html">HealthTreasure.com</a>
 	</div>
 	</footer>
 </div>
